# ImageMask

./: CMakeLists.txt  README.md  main.cpp
src/: CatmullCurveMask.cpp  CatmullCurveMask.h  CircleCurveMask.cpp  CircleCurveMask.h  MaskDataBase.cpp  MaskDataBase.h  MaskManager.cpp  MaskManager.h  MathUtil.cpp  MathUtil.h
test/: KeyCodeTest.cpp  MatUtilTest.cpp  main.cpp
