cmake_minimum_required(VERSION 3.6)
project(ImageMask)

set(OpenCV_DIR "/usr/local/opt/opencv3/share/OpenCV")
find_package(OpenCV)
include_directories(${OpenCV_INCLUDE_DIR})
enable_testing()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES  src/MaskDataBase.cpp src/MaskDataBase.h src/MaskManager.cpp src/MaskManager.h src/MathUtil.cpp src/MathUtil.h src/CatmullCurveMask.cpp src/CatmullCurveMask.h)
add_executable(ImageMask ${SOURCE_FILES} main.cpp)
set(TEST_SOURCE_FILES test/main.cpp test/MatUtilTest.cpp src/CircleCurveMask.cpp src/CircleCurveMask.h)
add_executable(ImageMaskTest ${SOURCE_FILES} ${TEST_SOURCE_FILES} )
add_executable(KeyCodeTest test/KeyCodeTest.cpp)
target_link_libraries(ImageMask ${OpenCV_LIBS})
target_link_libraries(ImageMaskTest ${OpenCV_LIBS} gtest gtest_main)
target_link_libraries(KeyCodeTest ${OpenCV_LIBS})
include_directories(src/)
add_subdirectory(lib/googletest)
include_directories(lib/googletest/googletest/include)