cmake_minimum_required(VERSION 3.6)
project(ImageMask)

#set(OpenCV_DIR "/usr/local/opt/opencv3/share/OpenCV")
set(OpenCV_DIR "/usr/local/other/opencv-2.4.13/share/OpenCV")
set(CUDA_USE_STATIC_CUDA_RUNTIME OFF)
find_package(OpenCV)
link_directories("/opt/Qt5.7.0/5.7/gcc_64/lib")
include_directories(${OpenCV_INCLUDE_DIR})
enable_testing()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES  src/MaskDataBase.cpp src/MaskDataBase.h src/MaskManager.cpp src/MaskManager.h src/MathUtil.cpp src/MathUtil.h src/CatmullCurveMask.cpp src/CatmullCurveMask.h src/CircleCurveMask.cpp src/CircleCurveMask.h)
add_executable(ImageMask ${SOURCE_FILES} main.cpp)
set(TEST_SOURCE_FILES test/main.cpp test/MatUtilTest.cpp)
add_executable(ImageMaskTest ${SOURCE_FILES} ${TEST_SOURCE_FILES} )
add_executable(KeyCodeTest test/KeyCodeTest.cpp)
target_link_libraries(ImageMask ${OpenCV_LIBS})
target_link_libraries(ImageMaskTest ${OpenCV_LIBS} gtest gtest_main)
target_link_libraries(KeyCodeTest ${OpenCV_LIBS})
include_directories(src/)
add_subdirectory(lib/googletest)
include_directories(lib/googletest/googletest/include)
